--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 alt="LinkedIn icon"
                 class="icon contact-icon"
               />
-              <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+              <p><a href="https://www.linkedin.com/in/soham-vasudeo-23b536216/" target="_blank">LinkedIn</a></p>
             </div>
           </div>
         
