--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <img src="./assets/project-5.png" class="project-img" alt="Sales Dashboard" onclick="location.href='project-details.html?project=5'"/><br><br><br>
             <h2 class="project-title">Sales Dashboard</h2>
             <div class="btn-container">
-              <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
+              <a href="https://github.com/Svbongo/Sales-Dashboard" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=5" target="_blank" class="project-btn">Know More</a>
           </div>
           </div>
