--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="profile__text">
                 <p class="section_text_p1">Hello, I'm</p>
                 <h1 class="title">Soham Vasudeo</h1>
-                <p class="section_text_p1">Aspiring Data Scientist</p>
+                <p class="section_text_p1">Aspiring Data Analyst</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
                         Download CV
