--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <img src="./assets/project-4.png" class="project-img" alt="Covid-19 Analysis" onclick="location.href='project-details.html?project=4'"/><br><br><br>
             <h2 class="project-title">Covid-19 Analysis</h2>
             <div class="btn-container">
-              <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
+              <a href="https://github.com/Svbongo/Covid-19-Analysis" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=4" target="_blank" class="project-btn">Know More</a>
           </div>
           </div>
