--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <!-- Particles.js Background -->
     <div id="particles-js"></div>
 
+    <div id="scrolltopcontainer" onclick="scrollTotop()">
+      <div id="scrollprogress"></div>
+      <span class="arrow">&#8679;</span>
+  </div>
+
     <!-- Navigation Menu -->
     <nav id="desktop-nav">
       <div class="nav-welcome-text">Welcome to My Portfolio</div>
@@ -185,7 +190,7 @@
             <img src="./assets/project-1.png" class="project-img" alt="Automated Financial Data Processing" onclick="location.href='project-details.html?project=1'" />
             <h2 class="project-title">Automated Financial Data Processing and Dynamic Reporting</h2>
             <div class="btn-container">
-              <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
+              <a href="https://github.com/Svbongo/Automated-Financial-Data-Processing-and-Dynamic-Reporting" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=1" class="project-btn">Know More</a>
           </div>
           </div>
