--- a/project-details.html
+++ b/project-details.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="project-style.css">
 </head>
 <body>
+    <!-- Scroll to Top Button -->
+<!-- Scroll to Top Button with Progress -->
+<div id="scrollTopContainer" onclick="scrollToTop()">
+    <div id="scrollProgress"></div>
+    <span class="arrow">&#8679;</span>
+</div>
+
+
     <header id="project-header">
         <a href="index.html#project" id="back-to-projects">← Back to Projects</a>
     </header>
