--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <li class="projects-tab">
                 <a href="#project">Project</a>
                 <div class="dropdown">
-                    <a href="project1.html">Automated Financial Data Processing</a>
-                    <a href="project2.html">Brain Alzheimer Detection</a>
-                    <a href="project3.html">Hand Gesture Recognition</a>
-                    <a href="project4.html">Covid-19 Analysis</a>
-                    <a href="project5.html">Sales Dashboard</a>
-                    <a href="project6.html">Project Six</a>
+                    <a href="project-details.html?project=1">Automated Financial Data Processing</a>
+                    <a href="project-details.html?project=2">Brain Alzheimer Detection</a>
+                    <a href="project-details.html?project=3">Hand Gesture Recognition</a>
+                    <a href="project-details.html?project=4">Covid-19 Analysis</a>
+                    <a href="project-details.html?project=5">Sales Dashboard</a>
+                    <a href="project-details.html?project=6">Project Six</a>
                 </div>
             </li>
             <li class="contact-tab">
@@ -51,7 +51,7 @@
                 <div class="dropdown">
                     <a href="mailto:sohamvasudeo@gmail.com">Email: sohamvasudeo@gmail.com</a>
                     <a href="tel:+15405583822">Phone: +1 (540) 558-3822</a>
-                    <a href="https://www.linkedin.com/in/soham-vasudeo-23b536216/" target="_blank">LinkedIn</a>
+                    <a href="www.linkedin.com/in/soham-vasudeo" target="_blank">LinkedIn</a>
                 </div>
             </li>
         </ul>
@@ -200,7 +200,7 @@
             <img src="./assets/project-2.png" class="project-img" alt="Brain Alzheimer Detection" onclick="location.href='project-details.html?project=2'"/><br><br>
             <h2 class="project-title">Brain Alzheimer Detection</h2>
             <div class="btn-container">
-              <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
+              <a href="https://github.com/Svbongo/" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=2" target="_blank" class="project-btn">Know More</a>
           </div>
           </div>
@@ -210,7 +210,7 @@
             <img src="./assets/project-3.png" class="project-img" alt="Hand Gesture Recognition" onclick="location.href='project-details.html?project=3'"/><br><br>
             <h2 class="project-title">Hand Gesture Recognition</h2>
             <div class="btn-container">
-              <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
+              <a href="https://github.com/Svbongo/Machine-Learning-Project" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=3" target="_blank" class="project-btn">Know More</a>
           </div>
           </div>
@@ -241,7 +241,7 @@
             <h2 class="project-title">Project Six</h2>
             <div class="btn-container">
               <a href="https://github.com/your-github-profile" target="_blank" class="project-btn">GitHub</a>
-              <a href="project-details.html" target="_blank" class="project-btn">Know More</a>
+              <a href="project-details.html?project=6" target="_blank" class="project-btn">Know More</a>
           </div>
           </div>
         </div>
