--- a/index.html
+++ b/index.html
@@ -106,30 +106,32 @@
               <p><strong>Master of Science – Business Administration</strong><br>
                   <em>Major: Global Business Analytics</em><br>
                   Virginia Tech – Alexandria, VA<br>
-                  Expected: May 2025
+                  Graduated: May 2025<br>
+                  CGPA: 3.88/4
               </p><br>
               <p><strong>Bachelor of Science – Business Information Technology</strong><br>
                   <em>Major: Cybersecurity Management and Analytics</em><br>
                   Virginia Tech – Blacksburg, VA<br>
-                  Graduated: May 2024
+                  Graduated: May 2024<br>
+                  CGPA: 3.33/4
               </p><br>
               <p><strong>Bachelor of Technology – Computer Science and Engineering</strong><br>
                   <em>Major: Data Science</em><br>
                   Narsee Monjee Institute Of Management Studies – Mumbai, India<br>
-                  Graduated: May 2024
+                  Graduated: May 2024<br>
+                  CGPA: 3.12/4
               </p><br><br>
           </div>
 
       <!-- Info and Skills -->
       <div class="details-container">
           <p>
-              As part of a collaborative program between NMIMS University, India, 
-              and Virginia Tech, USA, I have completed 3 years of Computer Engineering 
-              (specializing in Data Science) at NMIMS and 1 year of a Bachelor's in 
-              Cybersecurity at Virginia Tech. Currently, I am pursuing a Master's in 
-              Global Business Analytics. My goal is to leverage my skills in designing 
-              AI-driven, data-centric solutions to automate processes and deliver 
-              actionable insights for solving complex business challenges.
+            Graduated with a Master’s in Global Business Analytics from Virginia Tech , 
+            with a strong academic foundation in Computer Science (Data Science specialization) 
+            from NMIMS University, India, and a Bachelor's in Cybersecurity from Virginia Tech. 
+            Experienced in translating complex data into actionable insights through advanced analytics, 
+            machine learning, and Gen AI. Proven track record of designing data-centric, AI-powered 
+            solutions that solve real-world business problems.
           </p><br>
 
           <div class="skills">
