--- a/project-details.html
+++ b/project-details.html
@@ -29,19 +29,23 @@
             <p>Automated Financial Data Processing</p>
         </div>
         <div id="project2" class="project-item" onclick="loadProject(2)">
-            <img src="assets/project-2.png" alt="Brain Alzheimer Detection">
-            <p>Brain Alzheimer Detection</p>
+            <img src="assets/project-2.png" alt="Automated Financial Data Processing">
+            <p>Automated Financial Data Processing</p>
         </div>
         <div id="project3" class="project-item" onclick="loadProject(3)">
-            <img src="assets/project-3.png" alt="Hand Gesture Recognition">
-            <p>Hand Gesture Recognition</p>
+            <img src="assets/project-3.png" alt="Brain Alzheimer Detection">
+            <p>Brain Alzheimer Detection</p>
         </div>
         <div id="project4" class="project-item" onclick="loadProject(4)">
-            <img src="assets/project-4.png" alt="Covid-19 Analysis">
-            <p>Covid-19 Analysis</p>
+            <img src="assets/project-4.png" alt="Hand Gesture Recognition">
+            <p>Hand Gesture Recognition</p>
         </div>
         <div id="project5" class="project-item" onclick="loadProject(5)">
-            <img src="assets/project-5.png" alt="Sales Dashboard">
+            <img src="assets/project-5.png" alt="Covid-19 Analysis">
+            <p>Covid-19 Analysis</p>
+        </div>
+        <div id="project6" class="project-item" onclick="loadProject(6)">
+            <img src="assets/project-6.png" alt="Sales Dashboard">
             <p>Sales Dashboard</p>
         </div>
     </div>
