--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="about-section-container">
       <!-- About Image -->
       <div class="about__pic-container">
-          <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic">
+          <img src="./assets/about-pic.jpg" alt="Profile picture" class="about-pic">
       </div>
 
             <!-- Education Section -->
