--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
           <!-- Project 1 -->
           <div class="color-container">
-            <img src="./assets/project-1.png" class="project-img" alt="Automated Financial Data Processing" onclick="location.href='project-details.html?project=1'" />
-            <h2 class="project-title">Automated Financial Data Processing and Dynamic Reporting</h2>
+            <img src="./assets/project-1.jpg" class="project-img" alt="Socioeconomic Restructuring in Mid-1990s America" onclick="location.href='project-details.html?project=1'" />
+            <h2 class="project-title">Socioeconomic Restructuring in Mid-1990s America</h2>
             <div class="btn-container">
               <a href="https://github.com/Svbongo/Automated-Financial-Data-Processing-and-Dynamic-Reporting" target="_blank" class="project-btn">GitHub</a>
               <a href="project-details.html?project=1" class="project-btn">Know More</a>
