--- a/project-details.html
+++ b/project-details.html
@@ -25,8 +25,8 @@
     <!-- Project Carousel -->
     <div id="project-carousel">
         <div id="project1" class="project-item" onclick="loadProject(1)">
-            <img src="assets/project-1.png" alt="Automated Financial Data Processing">
-            <p>Automated Financial Data Processing</p>
+            <img src="assets/project-1.jpg" alt="Socioeconomic Restructuring in Mid-1990s America">
+            <p>Socioeconomic Restructuring in Mid-1990s America</p>
         </div>
         <div id="project2" class="project-item" onclick="loadProject(2)">
             <img src="assets/project-2.png" alt="Automated Financial Data Processing">
