--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- Navigation Menu -->
     <nav id="desktop-nav">
       <div class="nav-welcome-text">Welcome to My Portfolio</div>
+        <!-- Hamburger Icon for Mobile -->
+      <div class="hamburger" onclick="toggleMobileMenu()">&#9776;</div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -44,7 +46,6 @@
                     <a href="project-details.html?project=4">Hand Gesture Recognition</a>
                     <a href="project-details.html?project=5">Covid-19 Analysis</a>
                     <a href="project-details.html?project=6">Sales Dashboard</a>
-                    <a href="project-details.html?project=7">Project Six</a>
                 </div>
             </li>
             <li class="contact-tab">
@@ -57,6 +58,7 @@
             </li>
         </ul>
     </nav><br><br><br>
+    <div class="mobile-welcome-text">Welcome to My Portfolio</div>
 
     <!-- Profile Section -->
     <section id="profile">
